# specs_particles

./: Cargo.toml  README.md
src/: lib.rs  main.rs  simulation.rs
src/components/: log.rs  mod.rs  vintegrate.rs
