[package]
name = "specs_particles"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.0"
rand = "0.7.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ocl = "0.19.3"
em = "0.3.0"

[profile.dev]
opt-level = 3
